<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/set_profile_image"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/profile_image"
                    android:layout_margin="5dp"
                    app:civ_border_color="@color/colorPrimary"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/nume_familie"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/button_round"
                android:layout_centerHorizontal="true"
                android:hint="@string/numele_de_familie"
                android:drawableStart="@drawable/nume">
            </EditText>
            <EditText
                android:id="@+id/prenume"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_round"
                android:hint="@string/prenumele_dumneavoastra"
                android:layout_below="@+id/nume_familie"
                android:drawableStart="@drawable/prenume">
            </EditText>
            <EditText
                android:id="@+id/adresa"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/prenume"
                android:background="@drawable/button_round"
                android:drawableStart="@drawable/adresa"
                android:hint="@string/adresa_dumneavoastra"
                >
            </EditText>
            <EditText
                android:id="@+id/cnp"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/adresa"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/cnp"
                android:drawableStart="@drawable/cnp">
            </EditText>
            <EditText
                android:id="@+id/telefon"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/cnp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/numarul_de_telefon"
                android:drawableStart="@drawable/phone" />
            <EditText
                android:id="@+id/specializare"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/telefon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/specializarea_dumneavoastra"
                android:drawableStart="@drawable/occupation" />
            <CheckBox
                android:id="@+id/barbat"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/specializare"
                android:layout_centerHorizontal="true"
                android:text="@string/barbat"
                android:layout_toStartOf="@+id/femeie"
                android:layout_marginEnd="-20dp">
            </CheckBox>

            <CheckBox
                android:id="@+id/femeie"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/specializare"
                android:layout_centerHorizontal="true"
                android:text="@string/femeie"
                android:layout_alignEnd="@+id/specializare"
                android:layout_marginEnd="80dp">
            </CheckBox>

            <TextView
                android:id="@+id/text"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/specializare"
                android:hint="@string/sex"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginStart="35dp">
            </TextView>
            <CheckBox
                android:id="@+id/Casatorit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/text"
                android:layout_centerHorizontal="true"
                android:text="@string/casatorit"
                android:layout_alignStart="@+id/text">
            </CheckBox>
            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:hint="@string/selectati_data_de_nastere"
                android:id="@+id/dateOfBirth"
                android:layout_below="@+id/Casatorit"
                android:layout_centerHorizontal="true"
                >
            </TextView>
            <Button
                android:id="@+id/update"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/dateOfBirth"
                android:background="@drawable/buttons"
                android:text="@string/update_profile"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:inputType="textMultiLine"
                tools:ignore="TextViewEdits"
                android:padding="6dp"
                >
            </Button>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>