<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/toolbar"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Toolbar Title"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/hospitalphonelogin"/>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/numarul_de_telefon"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/codePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneNumber"
                android:autofillHints="Parola"
                android:ems="10"
                android:hint="@string/codul_de_verificare"
                android:inputType="number"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/getVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/codePhone"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:text="@string/trimite_codul" />

            <Button
                android:id="@+id/verifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/getVerificationCode"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:text="@string/verificare_cod" />

            <Button
                android:id="@+id/wrongPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verifyCode"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:text="@string/numar_gresit"
                android:visibility="gone" />
            <CheckBox
                android:id="@+id/checkBoxDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/wrongPhoneNumber"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>