<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/set_profile_image"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/profile_image"
                    android:layout_margin="5dp"
                    app:civ_border_color="@color/colorPrimary"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/nume_familie"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/button_round"
                android:layout_centerHorizontal="true"
                android:hint="@string/numele_de_familie"
                android:drawableStart="@drawable/nume">
            </TextView>
            <TextView
                android:id="@+id/prenume"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_round"
                android:hint="@string/prenumele_dumneavoastra"
                android:layout_below="@+id/nume_familie"
                android:drawableStart="@drawable/prenume">
            </TextView>
            <EditText
                android:id="@+id/studii_doctor"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/prenume"
                android:background="@drawable/button_round"
                android:drawableStart="@drawable/adresa"
                android:hint="@string/studii_doctor"
                android:maxLength="2000"
                android:maxLines="4"
                >
            </EditText>
            <TextView
                android:id="@+id/varsta"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/studii_doctor"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/varsta_doctor"
                android:drawableStart="@drawable/varsta">
            </TextView>
            <TextView
                android:id="@+id/telefon"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/varsta"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/numarul_de_telefon"
                android:drawableStart="@drawable/phone" />
            <TextView
                android:id="@+id/specializare"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@+id/telefon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_round"
                android:hint="@string/specializarea_dumneavoastra"
                android:drawableStart="@drawable/occupation" />
            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:numStars="5"
                android:stepSize=".5"
                android:layout_below="@+id/specializare"
                />
            <Button
                android:text="Submit Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rating_bar"
                android:id="@+id/submit_button" />

            <TextView
                android:text="Your rating will appear here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:id="@+id/rating_display_text_View"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:id="@+id/update"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rating_display_text_View"
                android:background="@drawable/buttons"
                android:text="@string/update_profile"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:inputType="textMultiLine"
                tools:ignore="TextViewEdits"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>